--- a/Flagrum.Web/Components/Modals/PromptModal.razor
+++ b/Flagrum.Web/Components/Modals/PromptModal.razor
@@ -33,6 +33,6 @@
 
     public void Close(bool isYes)
     {
-        Modal.Close(isYes ? OnYes : OnNo);
+        InvokeAsync(() => Modal.Close(isYes ? OnYes : OnNo));
     }
 }
