--- a/Flagrum.Web/Features/EarcMods/Modals/UriSelectModalRow.razor
+++ b/Flagrum.Web/Features/EarcMods/Modals/UriSelectModalRow.razor
@@ -5,7 +5,7 @@
 
 <div class="row py-1 pr-2 pl-4 transition-colors hover:bg-grey-700 select-none cursor-pointer"
      @onclick="() => OnClick(Node)">
-    <span class="material-icons text-sm">@AssetExplorerItem.GetIcon(Node.GetUri(Context))</span>
+    <span class="material-icons text-sm">@Icon</span>
     <span class="pl-2 flex-grow text-sm" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@Node.Name</span>
 </div>
 
@@ -14,8 +14,20 @@
     [CascadingParameter]
     public UriSelectModal Parent { get; set; }
 
+    private AssetExplorerNode _node;
+
     [Parameter]
-    public AssetExplorerNode Node { get; set; }
+    public AssetExplorerNode Node
+    {
+        get => _node;
+        set 
+        { 
+            _node = value;
+            Icon = AssetExplorerItem.GetIcon(_node.GetUri(Context));
+        }
+    }
+
+    private string Icon { get; set; }
 
     private void OnClick(AssetExplorerNode node)
     {
