--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -24,7 +24,7 @@
     </div>
 </CascadingValue>
 
-<Modal @ref="VersionNotesModal" Width="800" Height="600" Padding="0">
+<AutosizeModal @ref="VersionNotesModal" Padding="0">
     <HeaderView>
         <span class="text-grey-300 flex-grow">Software Update</span>
         <span class="material-icons cursor-pointer" @onclick="() => VersionNotesModal.Close()">cancel</span>
@@ -34,13 +34,13 @@
             <PatchNotes Version="@Version"/>
         </div>
     </BodyView>
-</Modal>
+</AutosizeModal>
 
 @code
 {
     private List<MenuItem> Items { get; set; } = new();
     private string Version { get; set; }
-    private Modal VersionNotesModal { get; set; }
+    private AutosizeModal VersionNotesModal { get; set; }
 
     protected override void OnInitialized()
     {
