Final localisation tweaks

--- a/Flagrum.Web/Features/ModLibrary/Index.razor
+++ b/Flagrum.Web/Features/ModLibrary/Index.razor
@@ -60,7 +60,7 @@
                     }
                 }
             }
-            <strong class="font-display block ml-2 text-grey-300 mb-3 text-lg">@L["Browse"]</strong>
+            <strong class="font-display block ml-2 text-grey-300 mb-3" style="font-size: @(CultureInfo.CurrentCulture.Name == "ja-JP" ? 0.9 : 1.2)rem">@L["Browse"]</strong>
             <small class="block text-grey-500 ml-2">
                 @L["BrowseDescription"]
             </small>
