--- a/Flagrum.Web/Components/Controls/ModTypeButton.razor
+++ b/Flagrum.Web/Components/Controls/ModTypeButton.razor
@@ -1,5 +1,6 @@
 ﻿<div class="select-none transition-colors border-r last:border-r-0 border-grey-900 px-4 py-2 cursor-pointer first:rounded-l last:rounded-r @(IsSelected ? "bg-accent2-900 text-grey-100" : "bg-dark-600 text-grey-400")"
-     @onclick="OnClick">
+     @onclick="OnClick"
+     style="font-size: @(CultureInfo.CurrentCulture.Name == "ja-JP" ? 0.9 : 1)rem">
     @Text
 </div>
 
