--- a/Flagrum.Web/Features/Settings/SettingsPage.razor
+++ b/Flagrum.Web/Features/Settings/SettingsPage.razor
@@ -25,13 +25,13 @@
             <select class="input bg-dark-550 flex-grow" style="max-width: 500px;" @onchange="OnLanguageChanged">
                 @if (CultureInfo.CurrentCulture.Name == "ja-JP")
                 {
-                    <option value="en-GB">English / イングリッシュ</option>
-                    <option value="ja-JP" selected>Japanese / 日本語</option>
+                    <option value="en-GB">@Localizer["English"]</option>
+                    <option value="ja-JP" selected>@Localizer["Japanese"]</option>
                 }
                 else
                 {
-                    <option value="en-GB" selected>English / イングリッシュ</option>
-                    <option value="ja-JP">Japanese / 日本語</option>
+                    <option value="en-GB" selected>@Localizer["English"]</option>
+                    <option value="ja-JP">@Localizer["Japanese"]</option>
                 }
             </select>
         </div>
@@ -52,15 +52,6 @@
                 <Button Icon="folder" Text="@Localizer["Browse"]" CssClass="ml-4" OnClickAsync="BinmodListPathClicked"/>
             </div>
             <small class="text-grey-600">@Localizer["DefaultBinmodPath"]</small>
-        </div>
-
-        <div class="box p-4 mb-2">
-            <div class="row mb-3">
-                <span class="mr-3" style="flex: 0 0 200px;">@Localizer["WorkshopPath"]</span>
-                <Textbox Size="Textbox.Variant.Stretch" @bind-Value="Data.WorkshopPath" IsReadOnly="true"/>
-                <Button Icon="folder" Text="@Localizer["Browse"]" CssClass="ml-4" OnClickAsync="WorkshopPathClicked"/>
-            </div>
-            <small class="text-grey-600">@Localizer["DefaultWorkshopPath"]</small>
         </div>
 
     </EditForm>
@@ -123,19 +114,6 @@
             {
                 Data.BinmodListPath = path;
                 Settings.SetBinmodListPath(path);
-                InvokeAsync(StateHasChanged);
-                InvokeAsync(Layout.CallStateHasChanged);
-            });
-    }
-
-    private async Task WorkshopPathClicked()
-    {
-        await WpfService.OpenFileDialogAsync(
-            "Workshop Manifest (*.acf)|*.acf",
-            path =>
-            {
-                Data.WorkshopPath = path;
-                Settings.SetWorkshopPath(path);
                 InvokeAsync(StateHasChanged);
                 InvokeAsync(Layout.CallStateHasChanged);
             });
