Minor bug fixes

--- a/Flagrum.Web/Features/Information/About.razor
+++ b/Flagrum.Web/Features/Information/About.razor
@@ -43,13 +43,13 @@
         
         <div class="row mt-6 mb-2">
             <div class="mr-4">
-                <DonateButton Alt="Ko-Fi" Text=@Localizer["Ko-Fi"] Url="https://ko-fi.com/kizari" ImageUrl="images/kofi-logo.png" />
+                <DonateButton Alt="Ko-Fi" Text=@Localizer["Ko-Fi"] Url="https://ko-fi.com/kizari" ImageUrl="branding/kofi-logo.png" />
             </div>
             <div class="mr-4">
-                <DonateButton Alt="PayPal" Text=@Localizer["PayPal"] Url="https://ko-fi.com/kizari" ImageUrl="images/paypal-logo.png" PayPal="true" />
+                <DonateButton Alt="PayPal" Text=@Localizer["PayPal"] Url="https://ko-fi.com/kizari" ImageUrl="branding/paypal-logo.png" PayPal="true" />
             </div>
             <div>
-                <DonateButton Alt="Buy Me a Coffee" Text=@Localizer["BMC"] Url="https://buymeacoffee.com/Exineris" ImageUrl="images/bmc-logo.png" />
+                <DonateButton Alt="Buy Me a Coffee" Text=@Localizer["BMC"] Url="https://buymeacoffee.com/Exineris" ImageUrl="branding/bmc-logo.png" />
             </div>
         </div>
 
